# sukeban_log

./: articles.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: parse.yml
