[tool.poetry]
name = "sukeban-log"
version = "0.1.0"
description = ""
authors = ["NoPlagiarism <37241775+NoPlagiarism@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
